# evenscribe-collector

./: .dockerignore  .evenscriberc  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker.sh  init-db-postgres.sh  init-db.sh  listener.c  main.c  main.cpp  param.h  persistence.cpp  run.sh  serializer.cpp  socket.cpp
include/taopq-1.0.0/: CMakeLists.txt
include/vlogs-1.0.0/: .gitignore  CMakeLists.txt
include/vlogs-1.0.0/include/victorialogslib/: client.h  client_safe.h
include/vlogs-1.0.0/src/: CMakeLists.txt  client.cpp  client_safe.cpp
include/vlogs-1.0.0/tests/: CMakeLists.txt  test_client.cpp  test_client_safe.cpp
src/: cJSON.c  cJSON.h  clickhouse_persistence.cpp  clickhouse_query_generator.cpp  config.cpp  config.h  helper.cpp  helper.h  json.c  log.cpp  log.h  main.cpp  param.h  persistence.cpp  persistence.h  postgres_persistence.cpp  postgres_query_generator.cpp  query_generator.cpp  query_generator.h  query_generator_clickhouse.cpp  query_generator_clickhouse.h  query_generator_postgres.cpp  query_generator_postgres.h  run_clickhouse.cpp  run_clickhouse.h  run_postgres.cpp  run_postgres.h  serializer.cpp  serializer.h  service.h  service_mac.cpp  service_mac.h  service_ubuntu.cpp  service_ubuntu.h  socket.cpp  socket.h
